<resources>
    <string name="app_name">RoomDatabase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_message">Enter Message</string>
    <string name="is_completed">Is Completed</string>
    <string name="completed_date">Completed date</string>
    <string name="add">Add</string>
    <string name="add_title">Add Title</string>
    <string name="enter_description">Enter description</string>
    <string name="add_description">Add Description</string>
    <string name="updated">Updated</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_notes">Delete Notes</string>
    <string name="delete_message">Do you want to delete selected notes?</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
</resources>