<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_10dp"
    tools:context=".AddUpdateNotesFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_title"
        android:layout_marginTop="@dimen/margin_10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:maxLines="1"
        android:maxLength="30"
        android:id="@+id/etTitle"
        android:inputType="textCapSentences"
        android:hint="@string/enter_title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_description"
        android:layout_marginTop="@dimen/margin_10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:minLines="10"
        android:id="@+id/etDescription"
        android:gravity="top"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/enter_description" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbIsCompleted"
        android:text="@string/is_completed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_date"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="30"
            android:gravity="end"
            android:id="@+id/tvCompletedDate"
            android:inputType="textCapSentences"
            android:hint="@string/enter_message" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/add"
        android:gravity="center_horizontal"/>

</LinearLayout>
</layout>